--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
       .footer a {
         color: #ccccff;
       }
+      .span12{
+      background:#c00 url() no-repeat;
+      width:300px;
+      height:80px;
+      }
     </style>
   </head>
   <body>
@@ -133,14 +138,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1 id="logo">ulato</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Audio micro-blogging with audio comments</p>
         </div>
       </div>
       <div class="row-fluid pitch">
