--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
       .footer a {
         color: #ccccff;
       }
-      .span12{
-      background:#c00 url() no-repeat;
+      #logo{
+      background:#c00 url("http://oi42.tinypic.com/2pzwr4g.jpg") no-repeat;
       width:300px;
       height:80px;
+      font-size:1;
+      color:#fff;
       }
     </style>
   </head>
@@ -130,7 +132,7 @@
     </div>
 
     <!-- We use row-fluid inside containers to achieve a resizable layout. -->
-    <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+`   <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
     <!-- http://stackoverflow.com/a/12270322 -->
     <div class="container">
       <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
