--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
       background:#c00 url("http://oi42.tinypic.com/2pzwr4g.jpg") no-repeat;
       width:300px;
       height:80px;
-      font-size:1;
+      margin: 0 auto;
+      font-size:1px;
       color:#fff;
       }
     </style>
