--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         color: #ccccff;
       }
       #logo{
-      background:#c00 url("http://oi42.tinypic.com/2pzwr4g.jpg") no-repeat;
+      background:transparent url("http://oi42.tinypic.com/2pzwr4g.jpg") no-repeat;
       width:300px;
       height:80px;
       margin: 0 auto;
