--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">Audio micro-blogging with audio comments</p>
+          <p class="lead">Audio micro-blogging with audio commenting</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -209,7 +209,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://oi39.tinypic.com/ehf2p.jpg">
         </div>
         <div class="span5 copy">
           <p>
