--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://oi43.tinypic.com/r0dqj5.jpg">
+          <img class="img-polaroid" src="http://oi44.tinypic.com/15zqryr.jpg">
         </div>
-
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
           <div class="span8 offset2">
@@ -213,17 +212,12 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            Ulato is new audio micro-blogging social network with audio commenting. Think of this
+	    as audio version of Tweeter. Users create 15 seconds notes are share them with others. Other
+	    users can leave audio comments to each audio note. So the key thing here is that instead
+	    of writing we communicate by means of short audio messages. You can write your notes while
+	    you are cycling, or you can listen comments to your notes while you are driving. Ulato is a new
+	    way of social interaction created for smartphones and new devices of new generation such as google glasses.
           </p>
         </div>
       </div>
@@ -245,7 +239,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://oi43.tinypic.com/r0dqj5.jpgOB">
         </div>
       </div>
 
