--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
         <div class="span5 copy">
           <p>
             Ulato is new audio micro-blogging social network with audio commenting. Think of this
-	    as audio version of Tweeter. Users create 15 seconds notes are share them with others. Other
-	    users can leave audio comments to each audio note. So the key thing here is that instead
+	    as an audio version of Tweeter. Users create 15 seconds notes are share them with others. Other
+	    users can leave audio comments to each audio note. \n The key thing here is that instead
 	    of writing we communicate by means of short audio messages. You can write your notes while
 	    you are cycling, or you can listen comments to your notes while you are driving. Ulato is a new
 	    way of social interaction created for smartphones and new devices of new generation such as google glasses.
