--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
         <div class="span5 copy">
           <p>
             Ulato is new audio micro-blogging social network with audio commenting. Think of this
-	    as an audio version of Tweeter. Users create 15 seconds notes are share them with others. Other
-	    users can leave audio comments to each audio note. \n The key thing here is that instead
+	    as an audio version of Tweeter. Users create 15 second notes and share them with others. Other
+	    users can leave audio comments to each audio note.</p><p>  The key thing here is that instead
 	    of writing we communicate by means of short audio messages. You can write your notes while
 	    you are cycling, or you can listen comments to your notes while you are driving. Ulato is a new
-	    way of social interaction created for smartphones and new devices of new generation such as google glasses.
+	    way of social interaction created for smartphones and devices of new generation such as google glasses.
           </p>
         </div>
       </div>
@@ -225,17 +225,10 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            Subscribe to your favourite streams and listen in real time how people discuss choosen audio notes.
+	    Ulato combines micro-blogging and podcasting. Now you can express your individuality and creativity through
+	    audio media on the go. Each audio note can contain one photo. Simply take a photo, attach your audio note
+	    and let other users leave their audio comments creating interesting and vibrant discussion.
           </p>
         </div>
         <div class="span5 asset">
