--- a/index.html
+++ b/index.html
@@ -227,8 +227,9 @@
           <p>
             Subscribe to your favourite streams and listen in real time how people discuss choosen audio notes.
 	    Ulato combines micro-blogging and podcasting. Now you can express your individuality and creativity through
-	    audio media on the go. Each audio note can contain one photo. Simply take a photo, attach your audio note
-	    and let other users leave their audio comments creating interesting and vibrant discussion.
+	    audio media on the go.</p><p> Each audio note can contain one photo. Simply take a photo, attach your audio note
+	    and let other users leave their audio comments crating interesting and vibrant discussion. Join us today and
+	    don't gorget to invite your friends - Ulato is the future of social networking!
           </p>
         </div>
         <div class="span5 asset">
