--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
       font-size:1px;
       color:#fff;
       }
-    </style>
+      .navbar-inner{
+      background-color: #125fa1 !important;
+      }
+   </style>
   </head>
   <body>
 
