--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ y<!DOCTYPE html>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Ulato is audio micro-blogging social network with audio commenting.
+                    Ulato is audio micro-blogging social network of new generation.
                   </div>
                 </div>
               </div>
@@ -269,7 +269,7 @@ y<!DOCTYPE html>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Ulato users interact with each other through 15 second audiom messages and audio comments.
+                    Ulato users interact with each other through 15 second audio messages and audio comments.
                   </div>
                 </div>
               </div>
