--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-y<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -137,7 +137,7 @@ y<!DOCTYPE html>
     </div>
 
     <!-- We use row-fluid inside containers to achieve a resizable layout. -->
-`   <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+   <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
     <!-- http://stackoverflow.com/a/12270322 -->
     <div class="container">
       <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
