--- a/index.html
+++ b/index.html
@@ -157,10 +157,11 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://oi44.tinypic.com/15zqryr.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://oi44.tinypic.com/15zqryr.jpg">
         </div>
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+		 <div class="row-fluid">
           <div class="span8 offset2">
             <div class="statistics">
               <div class="span4">
@@ -183,6 +184,7 @@
               </div>
             </div>
           </div>
+		  <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -191,18 +193,24 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+		  </div>
+		  <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+		  </div>
+		  <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+		  </div>
         </div>
+		</div>
       </div>
 
       <!-- Beyond this part the marketing copy begins. -->
@@ -211,7 +219,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://oi39.tinypic.com/ehf2p.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://oi39.tinypic.com/ehf2p.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -236,7 +244,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://oi43.tinypic.com/r0dqj5.jpgOB">
+          <img class="img-polaroid" alt="Placeholder" src="http://oi43.tinypic.com/r0dqj5.jpgOB">
         </div>
       </div>
 
